🔥 Epic website upgrade with separated JS and advanced animations

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     <main>
         <section class="hero" id="home">
             <div class="hero-content">
-                <h1 class="hero-title" id="heroTitle"></h1> <h2 class="hero-subtitle" data-lang-en="Cybersecurity Enthusiast" data-lang-id="Pegiat Keamanan Siber">Pegiat Keamanan Siber</h2>
+                <h1 class="hero-title" id="heroTitle"></h1>
+                <h2 class="hero-subtitle" data-lang-en="Cybersecurity Enthusiast" data-lang-id="Pegiat Keamanan Siber">Pegiat Keamanan Siber</h2>
                 <p class="hero-description" data-lang-en="Professional-grade cybersecurity tools for penetration testing, vulnerability assessment, and security research. Built by security professionals, for security professionals." data-lang-id="Tools keamanan siber tingkat profesional untuk uji penetrasi, penilaian kerentanan, dan riset keamanan. Dibuat oleh para profesional keamanan, untuk para profesional keamanan.">
                     Tools keamanan siber tingkat profesional untuk uji penetrasi, penilaian kerentanan, dan riset keamanan. Dibuat oleh para profesional keamanan, untuk para profesional keamanan.
                 </p>
@@ -107,12 +108,61 @@
                     </div>
                 </div>
 
+                <div class="tool-card" data-aos="fade-up" data-aos-delay="400">
+                    <div class="tool-icon"><i class="fas fa-shield-halved"></i></div>
+                    <h3 class="tool-title">CyberGuard</h3>
+                    <p class="tool-description" data-lang-en="A comprehensive security monitoring and protection system with real-time threat detection." data-lang-id="Sistem pemantauan dan perlindungan keamanan komprehensif dengan deteksi ancaman secara real-time.">
+                        Sistem pemantauan dan perlindungan keamanan komprehensif dengan deteksi ancaman secara real-time.
+                    </p>
+                    <ul class="tool-features">
+                        <li data-lang-en="Real-time Monitoring" data-lang-id="Pemantauan Real-time">Pemantauan Real-time</li>
+                        <li data-lang-en="Intrusion Detection" data-lang-id="Deteksi Intrusi">Deteksi Intrusi</li>
+                        <li data-lang-en="Automated Response" data-lang-id="Respon Otomatis">Respon Otomatis</li>
+                    </ul>
+                    <div class="tool-links">
+                        <a href="https://github.com/r00tH3x/CyberGuard" target="_blank"><i class="fab fa-github"></i> <span data-lang-en="Source Code" data-lang-id="Kode Sumber">Kode Sumber</span></a>
+                        <a href="#" onclick="event.preventDefault(); showDocs('CyberGuard')"><i class="fas fa-book"></i> <span data-lang-en="Documentation" data-lang-id="Dokumentasi">Dokumentasi</span></a>
+                    </div>
                 </div>
+
+                <div class="tool-card" data-aos="fade-up" data-aos-delay="500">
+                    <div class="tool-icon"><i class="fas fa-eye"></i></div>
+                    <h3 class="tool-title">Sentinel</h3>
+                    <p class="tool-description" data-lang-en="An advanced security surveillance solution for comprehensive network and system oversight." data-lang-id="Solusi pengawasan keamanan canggih untuk pemantauan jaringan dan sistem secara menyeluruh.">
+                        Solusi pengawasan keamanan canggih untuk pemantauan jaringan dan sistem secara menyeluruh.
+                    </p>
+                    <ul class="tool-features">
+                        <li data-lang-en="Network Traffic Analysis" data-lang-id="Analisis Lalu Lintas Jaringan">Analisis Lalu Lintas Jaringan</li>
+                        <li data-lang-en="Behavioral Monitoring" data-lang-id="Pemantauan Perilaku">Pemantauan Perilaku</li>
+                        <li data-lang-en="Anomaly Detection" data-lang-id="Deteksi Anomali">Deteksi Anomali</li>
+                    </ul>
+                    <div class="tool-links">
+                        <a href="https://github.com/r00tH3x/Sentinel" target="_blank"><i class="fab fa-github"></i> <span data-lang-en="Source Code" data-lang-id="Kode Sumber">Kode Sumber</span></a>
+                        <a href="#" onclick="event.preventDefault(); showDocs('Sentinel')"><i class="fas fa-book"></i> <span data-lang-en="Documentation" data-lang-id="Dokumentasi">Dokumentasi</span></a>
+                    </div>
+                </div>
+
+                <div class="tool-card" data-aos="fade-up" data-aos-delay="600">
+                    <div class="tool-icon"><i class="fas fa-fish"></i></div>
+                    <h3 class="tool-title">DarkPhish</h3>
+                    <p class="tool-description" data-lang-en="A phishing simulation and security awareness training platform to test and educate users." data-lang-id="Platform simulasi phishing dan pelatihan kesadaran keamanan untuk menguji dan mengedukasi pengguna.">
+                        Platform simulasi phishing dan pelatihan kesadaran keamanan untuk menguji dan mengedukasi pengguna.
+                    </p>
+                    <ul class="tool-features">
+                        <li data-lang-en="Campaign Simulation" data-lang-id="Simulasi Kampanye">Simulasi Kampanye</li>
+                        <li data-lang-en="Social Engineering" data-lang-id="Rekayasa Sosial">Rekayasa Sosial</li>
+                        <li data-lang-en="Detailed Analytics" data-lang-id="Analitik Rinci">Analitik Rinci</li>
+                    </ul>
+                    <div class="tool-links">
+                        <a href="https://github.com/r00tH3x/DarkPhish" target="_blank"><i class="fab fa-github"></i> <span data-lang-en="Source Code" data-lang-id="Kode Sumber">Kode Sumber</span></a>
+                        <a href="#" onclick="event.preventDefault(); showDocs('DarkPhish')"><i class="fas fa-book"></i> <span data-lang-en="Documentation" data-lang-id="Dokumentasi">Dokumentasi</span></a>
+                    </div>
+                </div>
+            </div>
         </section>
         
         <section id="about" class="about-section">
             </section>
-
     </main>
 
     <footer class="footer" id="contact">
